fix(cmake): correct imported location message for Sentry library
Updated the message output for the imported location of the Sentry library in CMakeLists.txt to fix a typo and ensure accurate logging. Additionally, modified the install command to use the correct target file for the Sentry shared library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -288,8 +288,8 @@ elseif(BUILD_CLIENT)
         set(SENTRY_DLL_PATH "$<TARGET_FILE:sentry::sentry>")
         message(STATUS "sentry dll found in ${SENTRY_DLL_PATH}")
         get_target_property(ILUBT sentry::sentry IMPORTED_LOCATION_${UPPER_BUILD_TYPE})
-        message(STATUS "IMPORTED_LOCALTION_${UPPER_BUILD_TYPE} of snetry::sentry=${ILUBT}")
-        install(FILES ${SENTRY_SHARED_LIBRARY} DESTINATION ${CMAKE_INSTALL_BINDIR})
+        message(STATUS "IMPORTED_LOCATION_${UPPER_BUILD_TYPE} of sentry::sentry=${ILUBT}")
+        install(FILES $<TARGET_FILE:sentry::sentry> DESTINATION ${CMAKE_INSTALL_BINDIR})
 
         # Crashpad_handler
         get_target_property(CRASHPAD_HANDLER_PROGRAM
