refactor(cmake): update imported location for Crashpad handler
Changed the imported location for the Crashpad handler to use RELWITHDEBINFO instead of the previous build type variable. This ensures the correct handler is referenced during the build process.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,7 +286,7 @@ elseif(BUILD_CLIENT)
         # Crashpad_handler
         get_target_property(CRASHPAD_HANDLER_PROGRAM
                 sentry_crashpad::crashpad_handler
-                IMPORTED_LOCATION_${UPPER_BUILD_TYPE}
+                IMPORTED_LOCATION_RELWITHDEBINFO
         )
         message(STATUS "crashpad_handler found in ${CRASHPAD_HANDLER_PROGRAM}")
         install(PROGRAMS ${CRASHPAD_HANDLER_PROGRAM} DESTINATION ${CMAKE_INSTALL_BINDIR})
