refactor(cmake): update comment for Qt6::Core target alias used by sentry
Clarified the comment regarding the alias for the Qt6::Core target to specify its usage in the sentry recipe.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,9 @@ add_subdirectory(src/3rdparty/keychain)
 
 #####
 
-# Create an alias for the Qt6::Core target, used by sentry
+# Create an alias for the Qt6::Core target, used by the sentry recipe
 find_package(Qt6 COMPONENTS Core)
 add_library(qt::qt ALIAS Qt6::Core)
-
-####
 
 if(CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
     # Use fallback library types for imported dependencies
