--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -4,7 +4,7 @@ else()
     project(server LANGUAGES C CXX)
 endif()
 
-find_package(Qt6 REQUIRED COMPONENTS Network Svg)
+find_package(Qt6 REQUIRED COMPONENTS Network Svg SvgWidgets Widgets)
 find_package(Poco 1.13.3 REQUIRED XML)
 find_package(sentry REQUIRED)
 
@@ -207,7 +207,7 @@ target_link_libraries(updater
     ${updater_DEPS})
 
 target_link_libraries(${APPLICATION_EXECUTABLE}
-    Qt6::Svg
+    Qt6::Svg Qt6::SvgWidgets
     sentry::sentry
     updater)
 
