fix(update_kstore): change input type from environment to string

--- a/.github/workflows/update_kstore.yml
+++ b/.github/workflows/update_kstore.yml
@@ -5,7 +5,7 @@ on:
     inputs:
         environment:
             description: 'The environment to update the kStore for'
-            type: environment
+            type: string
             required: true
             default: 'internal beta'
         tag:
