fix(cmake): disable installation of utf8proc in UNIX builds
This change sets the UTF8PROC_INSTALL option to OFF, preventing the installation of utf8proc when building on UNIX systems. This adjustment helps streamline the build process by avoiding unnecessary dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ endif()
 
 # utf8proc
 if(UNIX)
+    set(UTF8PROC_INSTALL OFF CACHE BOOL "Disable installation of utf8proc" FORCE)
     add_subdirectory(src/3rdparty/utf8proc)
 endif()
 
