fix(build): remove duplicate libkeychain.a and adjust build folder variable
Removed the duplicate libkeychain.a file from the AppImage build process and ensured the build folder variable is properly quoted for consistency. Additionally, added a comment regarding the potential need to remove specific library copies when updating Qt versions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 
 # utf8proc
 if(UNIX)
-    set(UTF8PROC_INSTALL OFF CACHE BOOL "Disable installation of utf8proc" FORCE)
+    set(UTF8PROC_INSTALL OFF CACHE BOOL "Disable installation of utf8proc" FORCE) # Disable installation of the libutf8proc.a static library
     add_subdirectory(src/3rdparty/utf8proc)
 endif()
 
