--- a/.github/actions/build_macos/action.yml
+++ b/.github/actions/build_macos/action.yml
@@ -112,7 +112,7 @@ runs:
               fi
             fi
           done
-          
+          # Restore the original environment variables set before running conanrun.sh
           source $(find "${{ github.workspace }}/build-macos" -name deactivate_conanrun.sh | head -n 1)
         shell: bash
         if: ${{ steps.build.outcome == 'success' && inputs.release_build == 'false' }}
