fix(cmake): simplify Sentry library path handling by removing uppercase conversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,7 +281,7 @@ elseif(BUILD_CLIENT)
         # Convert CMAKE_BUILD_TYPE to uppercase because Conan provides variables like sentry_BIN_DIRS_RELEASE,
         # where the build type (e.g., DEBUG, RELEASE) is always in uppercase.
         string(TOUPPER "${CMAKE_BUILD_TYPE}" UPPER_BUILD_TYPE)
-        find_library(SENTRY_SHARED_LIBRARY NAMES sentry PATH "${sentry_BIN_DIRS_${UPPER_BUILD_TYPE}}" NO_CACHE)
+        find_library(SENTRY_SHARED_LIBRARY NAMES sentry NO_CACHE)
         message(STATUS "sentry dll found in ${SENTRY_SHARED_LIBRARY}")
         install(FILES ${SENTRY_SHARED_LIBRARY} DESTINATION ${CMAKE_INSTALL_BINDIR})
 
