--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,15 +278,24 @@ elseif(BUILD_CLIENT)
         install(FILES ${VFS_SHARED_LIBRARY} DESTINATION ${CMAKE_INSTALL_BINDIR})
 
         # Sentry
-        find_library(SENTRY_SHARED_LIBRARY NAMES sentry PATHS ${CONAN_RUNTIME_LIB_DIRS} NO_DEFAULT_PATH NO_CACHE)
+        find_library(SENTRY_SHARED_LIBRARY
+                NAMES sentry
+                PATHS ${CONAN_RUNTIME_LIB_DIRS}
+                NO_DEFAULT_PATH NO_CACHE
+        )
         message(STATUS "sentry dll found in ${SENTRY_SHARED_LIBRARY}")
         install(FILES ${SENTRY_SHARED_LIBRARY} DESTINATION ${CMAKE_INSTALL_BINDIR})
 
         # Crashpad_handler
-        get_target_property(CRASHPAD_HANDLER_PROGRAM
-                sentry_crashpad::crashpad_handler
-                IMPORTED_LOCATION_RELWITHDEBINFO
+        find_program(CRASHPAD_HANDLER_PROGRAM
+                NAMES crashpad_handler
+                PATHS ${CONAN_RUNTIME_LIB_DIRS}
+                NO_DEFAULT_PATH NO_CACHE
         )
+#        get_target_property(CRASHPAD_HANDLER_PROGRAM
+#                sentry_crashpad::crashpad_handler
+#                IMPORTED_LOCATION_RELWITHDEBINFO
+#        )
         message(STATUS "crashpad_handler found in ${CRASHPAD_HANDLER_PROGRAM}")
         install(PROGRAMS ${CRASHPAD_HANDLER_PROGRAM} DESTINATION ${CMAKE_INSTALL_BINDIR})
     else()
