feat(conanfile): add Poco package to Conan build process
This commit introduces the Poco library to the Conan build system, allowing for its inclusion in the project dependencies. The version specified is 1.13.3, and the necessary configurations have been added to support its integration.

--- a/src/libcommonserver/vfs/mac/CMakeLists.txt
+++ b/src/libcommonserver/vfs/mac/CMakeLists.txt
@@ -37,7 +37,7 @@ if(BUILD_KDRIVE_OSX_BUNDLE AND NOT BUILD_LIBRARIES_ONLY)
     set(ENV_DEST_DIR $ENV{DESTDIR})
 
     include(GeneralizeConanLibraryDirs)
-    get_library_dirs("OpenSSL" "openssl-universal")
+    get_library_dirs("OpenSSL" "openssl")
     install(CODE "
         message(STATUS \"Fixing library paths for kDrivecommonserver_vfs_mac...\")
         execute_process(COMMAND \"install_name_tool\" -change ${_OpenSSL_LIB_DIRS}/libssl.3.dylib @rpath/libssl.3.dylib ${ENV_DEST_DIR}${CMAKE_INSTALL_PREFIX}/${KDRIVE_OSX_BUNDLE}/Contents/PlugIns/${libcommonserver_NAME}_vfs_mac.dylib)
