refactor(cmake): update Poco version requirement to 1.13.3
Changed the Poco package requirement in CMakeLists.txt to specify version 1.13.3 for multiple targets to ensure compatibility and consistency across the project.

--- a/test/libcommonserver/CMakeLists.txt
+++ b/test/libcommonserver/CMakeLists.txt
@@ -4,7 +4,7 @@ else()
     project(testcommonserver LANGUAGES C CXX)
 endif()
 
-find_package(Poco REQUIRED Foundation)
+find_package(Poco 1.13.3 REQUIRED Foundation)
 find_package(log4cplus 2.1.2 REQUIRED)
 
 set(testcommonserver_NAME ${APPLICATION_NAME}_test_common_server)
