--- a/test/libsyncengine/CMakeLists.txt
+++ b/test/libsyncengine/CMakeLists.txt
@@ -5,7 +5,7 @@ else()
 endif()
 
 find_package(SQLite3 3.8.0 REQUIRED)
-find_package(Poco REQUIRED Foundation)
+find_package(Poco 1.13.3 REQUIRED Foundation)
 find_package(log4cplus 2.1.2 REQUIRED)
 
 set(testsyncengine_NAME ${APPLICATION_NAME}_test_syncengine)
