--- a/test/libcommon/CMakeLists.txt
+++ b/test/libcommon/CMakeLists.txt
@@ -4,7 +4,7 @@ else()
     project(testcommon LANGUAGES C CXX)
 endif()
 
-find_package(Poco REQUIRED Foundation)
+find_package(Poco 1.13.3 REQUIRED Foundation)
 find_package(log4cplus 2.1.2 REQUIRED)
 
 set(testcommon_NAME ${APPLICATION_NAME}_test_common)
