refactor(action.yml): remove redundant line in Poco library handling
Eliminated an unnecessary line in the action.yml file related to the PocoXML.dll entry, streamlining the dependency handling process.

--- a/.github/actions/build_windows/action.yml
+++ b/.github/actions/build_windows/action.yml
@@ -114,7 +114,7 @@ runs:
               "PocoNet.dll",
               "PocoNetSSL.dll",
               "PocoUtil.dll",
-              "PocoXML.dll",
+              "PocoXML.dll"
           )
 
           $paths = $env:PATH -split ';' | Where-Object { $_ -like '*\.conan2\p*' }
