refactor(action.yml, CMakeLists.txt): improve Poco library handling
Fixed a syntax error in action.yml and added Poco library directory retrieval in CMakeLists.txt to enhance dependency management.

--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -114,7 +114,7 @@ runs:
                 -o -iname 'libQt6Sql*.so*' \
                 -o -iname 'libQt6Core*.so*' \
                 -o -iname 'libQt6DBus*.so*' \
-                -o -iname 'libQt6Svg*.so* \
+                -o -iname 'libQt6Svg*.so*' \
                 -o -iname 'libicuuc*.so*' \
                 -o -iname 'libicudata*.so*' \
                 -o -iname 'libicui18n*.so*' \
