feat(cmake): add Poco package dependency
Added the Poco package version 1.13.3 as a required dependency in the CMake configuration to ensure proper integration and functionality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -322,6 +322,7 @@ if(UNIX AND NOT APPLE)
         find_package(log4cplus 2.1.2 REQUIRED) # used to get the variable log4cplus_LIB_DIRS_RELEASE
         find_package(xxHash 0.8.2 REQUIRED)
         find_package(OpenSSL 3.1.0 REQUIRED SSL Crypto)
+        find_package(Poco 1.13.3 REQUIRED)
         # We use <lib>_LIB_DIRS_RELEASE because every dependency is built in release mode.+
         file(COPY
             # log4cplus
