fix(cmake): update library path handling for Qt dependencies
Modified the CMakeLists.txt to replace the use of ENV_DYLD_LIBRARY_PATH with a constructed LIB_PATHS variable that joins CONAN_RUNTIME_LIB_DIRS and the existing DYLD_LIBRARY_PATH. This change ensures that the correct library paths are used during the deployment of Qt dependencies for both kdrive_client and kDrive applications.

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -257,12 +257,12 @@ if(BUILD_KDRIVE_OSX_BUNDLE AND NOT BUILD_LIBRARIES_ONLY)
     if (NOT ENV_DEPLOY_LIBS_MANUALLY OR NOT CMAKE_BUILD_TYPE MATCHES "Debug")
         set(ENV_QTDIR $ENV{QTDIR})
         set(ENV_DESTDIR $ENV{DESTDIR})
-        set(ENV_DYLD_LIBRARY_PATH $ENV{DYLD_LIBRARY_PATH})
 
-        message(STATUS "DYLD_LIBRARY_PATH: ${ENV_DYLD_LIBRARY_PATH}")
+        string(JOIN ":" LIB_PATHS ${CONAN_RUNTIME_LIB_DIRS} $ENV{DYLD_LIBRARY_PATH})
+        message(STATUS "LIB_PATHS: ${LIB_PATHS}")
         install(CODE "
             message(STATUS \"Deploying (Qt) dependencies for kDrive...\")
-            execute_process(COMMAND ${ENV_QTDIR}/bin/macdeployqt ${ENV_DESTDIR}${CMAKE_INSTALL_PREFIX}/${KDRIVE_OSX_BUNDLE} -libpath=${ENV_DYLD_LIBRARY_PATH} -no-strip -executable=${ENV_DESTDIR}${CMAKE_INSTALL_PREFIX}/${KDRIVE_OSX_BUNDLE}/Contents/MacOS/${APPLICATION_EXECUTABLE})
+            execute_process(COMMAND ${ENV_QTDIR}/bin/macdeployqt ${ENV_DESTDIR}${CMAKE_INSTALL_PREFIX}/${KDRIVE_OSX_BUNDLE} -libpath=${LIB_PATHS} -no-strip -executable=${ENV_DESTDIR}${CMAKE_INSTALL_PREFIX}/${KDRIVE_OSX_BUNDLE}/Contents/MacOS/${APPLICATION_EXECUTABLE})
             " COMPONENT RUNTIME)
 
         cmake_path(GET SPARKLE_LIBRARY PARENT_PATH USER_FRAMEWORK_PATH)
