--- a/.github/actions/build_linux_amd/action.yml
+++ b/.github/actions/build_linux_amd/action.yml
@@ -84,31 +84,31 @@ runs:
       - name: Fetch dependencies
         run: | 
           mkdir dependencies
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Widgets.* ./dependencies/ 
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Gui.* ./dependencies/
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Network.* ./dependencies/
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Sql.* ./dependencies/
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Core.* ./dependencies/
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6DBus.* ./dependencies/
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libicui18n.* ./dependencies/
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libicuuc.* ./dependencies/
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libicudata.* ./dependencies/
-          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Svg.* ./dependencies/
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Widgets.so ./dependencies/ 
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Gui.so ./dependencies/
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Network.so ./dependencies/
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Sql.so ./dependencies/
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Core.so ./dependencies/
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6DBus.so ./dependencies/
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libicui18n.so ./dependencies/
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libicuuc.so ./dependencies/
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libicudata.so ./dependencies/
+          cp -a /home/runner/Qt/6.2.3/gcc_64/lib/libQt6Svg.so ./dependencies/
           mkdir dependencies/platforms
           cp /home/runner/Qt/6.2.3/gcc_64/plugins/platforms/libqoffscreen.so ./dependencies/platforms/
           cp /usr/local/lib/libcppunit-1.15.so.2 ./dependencies/ 
-          cp -a /usr/local/lib/libPocoUtil* ./dependencies/
-          cp -a /usr/local/lib/libPocoJSON* ./dependencies/
-          cp -a /usr/local/lib/libPocoXML* ./dependencies/
-          cp -a /usr/local/lib/libPocoFoundation* ./dependencies/
-          cp -a /usr/local/lib/libPocoNetSSL* ./dependencies/
-          cp -a /usr/local/lib/libPocoCrypto* ./dependencies/
-          cp -a /usr/local/lib/libPocoNet* ./dependencies/
-          cp -a /usr/local/lib/libsentry* ./dependencies/
-          cp -a /usr/local/lib/libzip* ./dependencies/
-          cp -a /usr/lib/x86_64-linux-gnu/libglib* ./dependencies/
-          cp -a /usr/lib/x86_64-linux-gnu/libsecret* ./dependencies/
-          cp -a /usr/lib/x86_64-linux-gnu/libgthread* ./dependencies/
+          cp /usr/local/lib/libPocoUtil.so ./dependencies/
+          cp /usr/local/lib/libPocoJSON.so ./dependencies/
+          cp /usr/local/lib/libPocoXML.so ./dependencies/
+          cp /usr/local/lib/libPocoFoundation.so ./dependencies/
+          cp /usr/local/lib/libPocoNetSSL.so ./dependencies/
+          cp /usr/local/lib/libPocoCrypto.so ./dependencies/
+          cp /usr/local/lib/libPocoNet.so ./dependencies/
+          cp /usr/local/lib/libsentry.so ./dependencies/
+          cp /usr/local/lib/libzip.so ./dependencies/
+          cp /usr/lib/x86_64-linux-gnu/libglib-2.0.so ./dependencies/
+          cp /usr/lib/x86_64-linux-gnu/libsecret-1.so ./dependencies/
+          cp /usr/lib/x86_64-linux-gnu/libgthread-2.0.so ./dependencies/
           cp /usr/lib/x86_64-linux-gnu/libdbus-1.so.3 ./dependencies/
         shell: bash
         if: steps.build.outcome == 'success'
@@ -149,7 +149,7 @@ runs:
           retention-days: 1
           compression-level: 0
         if: steps.build.outcome == 'success'
-     
+
       - name: Upload uncached build common files
         uses: actions/upload-artifact@v4
         with:
